# oz_django8

./: manage.py  pyproject.toml
.github/workflows/: CI.yml
oz_Django8/: asgi.py  settings.py  urls.py  wsgi.py
